[package]
name = "time_sigil"
version = "0.0.1"
edition = "2021"
authors = ["Takeru KODAMA <zen.en.tonal@gmail.com>"]
description = "task scheduler"
repository = "https://github.com/zen-en-tonal/time_sigil"
license = "MIT OR Apache-2.0"
keywords = ["task"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-cron-scheduler = "0.10.0"
tokio-util = "0.7.10"
uuid = { version = "1.7.0", features = ["serde"] }
